<resources>
    <string name="app_name">Body Rehab</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign in</string>
    <string name="sign_up">Sign up</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="welcome_back">Body Rehab</string>
    <string name="register_now">Register Now!</string>
    <string name="todo">TODO</string>
    <string name="login">Log in</string>
    <string name="create_account">Create Account</string>
    <string name="home">home</string>
    <string name="search">Search</string>
    <string name="playlist">Playlist</string>
    <string name="profile">Profile</string>
    <string name="add">Add</string>
    <string name="routine">Routine</string>
    <string name="delete">Delete</string>
    <string name="change">Change</string>
    <string name="delete_video">Delete Video</string>
    <string name="change_title">Change Title ...</string>
    <string name="playlists">Playlists</string>
    <string name="name">Name</string>
    <string name="done">Done</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="video_title">Video Title</string>
    <string name="minutes">Minutes</string>
    <string name="seconds">Seconds</string>
    <string name="info">Info</string>
    <string name="welcome_msg">Welcome to Body Rehab, the following guide will show you how to used the app.</string>
    <string name="step1">Step 1: Create a new playlist</string>
    <string name="step_2_search_and_add_video_to_playlist">Step 2: Search and Add video to playlist</string>
    <string name="step_3">Step 3: View videos on playlist</string>
    <string name="step_4">Step 4: Watch video and Add timer</string>
</resources>